# llm_rust_django_nextjs

./: .gitignore  .slugignore  README.md  dev-docker-entrypoint.sh  dev.Dockerfile  docker-compose.yml  research.md
.github/: FUNDING.yml
.github/workflows/: main.yml
Backend/: Procfile  db.sqlite3  dev-docker-entrypoint.sh  dev.Dockerfile  manage.py  requirements.txt  vercel.json
Backend/fact-checker_now/: base_chain.py  chains.py  fact_checker.py  runnable.py  serializable.py
Backend/fact_checker/: base_chain.py  chains.py  config.py  fact_checker.py  runnable.py  serializable.py
Backend/fact_checker/callbacks/: base.py  manager.py
Backend/fact_checker/schema/: memory.py  messages.py  schema_serializable.py
Backend/fact_checker/utils/: utils.py
Backend/hallucination_app/: apps.py  constants.py  demo_gpt.py  demo_ingest.py
Backend/hallucination_app/DATA_LOADERS/: loader.py
Backend/hallucination_app/DOCUMENT_LOADERS/: base.py  csv_loader.py
Backend/hallucination_project/: asgi.py  settings.py  urls.py  wsgi.py
Backend/llm_backend/: manage.py
Backend/llm_backend_project/: asgi.py  settings.py  urls.py  wsgi.py
Frontend/llm_frontend/: package-lock.json  package.json
Frontend/llm_interface/: README.md  package-lock.json  package.json
Frontend/paul-graham-gpt/: package-lock.json
manager/: gpt_call.go  main.go
manager/llama2_rs/: Cargo.toml
manager/loaders/llm-loaders/: Cargo.toml
manager/loaders/llm-loaders/src/: hallucination_checker.rs  main.rs
manager/test_conversational_chat/: conversational_ai_rust.md
(+115 files in other folders)
