[package]
name = "llm-loaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"  # Or the latest version
llm-chain = "0.12.3"
llm-chain-openai = "0.12.3"
tokio = { version = "1.32.0", features = ["full"] }
